hphp/hack/test/typecheck/like_types/dynamic_coercion/like_decl_types/tlike.php.exp
File "tlike.php", line 10, characters 13-20:
Invalid return type (Typing[4110])
File "tlike.php", line 10, characters 27-30:
This is a dynamic value
File "tlike.php", line 10, characters 13-20:
It is incompatible with an array key (int | string)
